deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stream-processing
  labels:
    name: stream-processing
